<resources>
    <string name="app_name" translatable="false">DefectTracking</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="url" translatable="false">URL</string>
    <string name="urlTextEdit">Enter URL</string>
    <string name="action_settings">Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="OK" translatable="false">OK</string>
    <string name="logInToastUsername">Enter your username</string>
    <string name="logInToastPassword">Enter your password</string>
    <string name="logInSuccess">Hello </string>
    <string name="updateURL">Updated URL</string>
    <string name="logInUsernameHint">Username</string>
    <string name="logInPasswordHint">Password</string>
    <string name="logInBtn">Login</string>
    <string name="languageBtn">Language Options</string>
    <string name="location">Location</string>
    <string name="backBtn">Back</string>
    <string name="homeBtn">Home</string>
    <string name="submitBtn">Submit</string>
    <string name="tradeName">Trade Name:</string>
    <string name="descript">Description:</string>
    <string name="date">Date created:</string>
    <string name="assign">Assigned to</string>
    <string name="note">Note(s)</string>
    <string name="complete">Completed:</string>
    <string name="editBtn">Edit</string>
    <string name="closeBtn">Close Defect</string>
    <string name="defectBefore">Defect Before</string>
    <string name="defectAfter">Defect After</string>
    <string name="status">Status</string>
    <string name="locate">Location:</string>
    <string name="defect">Defect</string>
    <string name="project">Project</string>
    <string name="phase">Phase</string>
    <string name="block">Block</string>
    <string name="unit">Unit</string>
    <string name="dateCreated">Date Created</string>
    <string name="roomNo">Unit No.</string>
    <string name="defectManage">Defect Management</string>
    <string name="selectLocate">Select Location:</string>
    <string name="type">Type:</string>
    <string name="selectTrade">Select Trade:</string>
    <string name="selectDes">Select Description:</string>
    <string name="nextBtn">Next</string>
    <string name="floor">Floor</string>
    <string name="saveBtn">Save</string>
    <string name="defectTrack">Defect Tracking</string>
    <string name="room">Room</string>
    <string name="defectType">Defect Type</string>
    <string name="tradeN">Trade name</string>
    <string name="des">description</string>
    <string name="unitNo">Unit No.</string>
    <string name="contractor">Contractor</string>
    <string name="takePic">Take Picture</string>
    <string name="fixedDefect">Fixed Defect</string>
    <string name="selectContractor">Select contractor</string>
    <string name="dashboard">Dashboard</string>
    <string name="addNewDefect">Add New Defect</string>
    <string name="userManage">User Management</string>
    <string name="personal">Personal</string>
    <string name="setting">Setting</string>
    <string name="logOut">Log out</string>
    <string name="exit">Exit</string>
    <string name="icon">Icon</string>
    <string name="namePosition">Full Name and Position</string>
    <string name="totStats">Total Statistics</string>
    <string name="complaint">Complaint Unit(s) Remaining</string>
    <string name="totDefect">Total Defect(s)</string>
    <string name="totDefectC">Total Defect(s) Closed</string>
    <string name="totDefectR">Total Defect(s) Remaining</string>
    <string name="defectOut">Defect(s) Outstanding Ageing</string>
    <string name="todayStats">Today's Statistics</string>
    <string name="defectCToday">Defect(s) Closed Today</string>
    <string name="defectFound">Defect(s) Found Today</string>
    <string name="complaintToday">Complaint Unit Today</string>
    <string name="defectPlace">Place</string>
</resources>
