<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/report"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/add_defect"
            android:icon="@drawable/addnewdefect"
            android:title="@string/addNewDefect" />
        <item
            android:id="@+id/defect_management"
            android:icon="@drawable/defect_display"
            android:title="@string/defectManage"/>
        <item
            android:id="@+id/user_management"
            android:icon="@drawable/people_icon"
            android:title="@string/userManage" />

    </group>

    <item android:title="@string/personal">
        <menu>
            <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/setting" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/exit"
                android:title="@string/logOut" />
            <item
                android:id="@+id/exit"
                android:icon="@drawable/cross_icon"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
