<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="4.75"
            android:layout_margin="30dp"
            android:background="#CCCCCC">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="4"
                android:orientation="horizontal"
                android:background="@color/White"
                android:padding="10dp"
                android:layout_marginBottom="2dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/project"
                    android:padding="20dp"/>
                <Spinner
                    android:id="@+id/spProject"
                    android:layout_gravity="top"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"></Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="4"
                android:orientation="horizontal"
                android:background="@color/White"
                android:padding="10dp"
                android:layout_marginBottom="2dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/phase"
                    android:padding="20dp"/>
                <Spinner
                    android:id="@+id/spPhase"
                    android:layout_gravity="top"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"></Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="4"
                android:orientation="horizontal"
                android:background="@color/White"
                android:padding="10dp"
                android:layout_marginBottom="2dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/block"
                    android:padding="20dp"/>
                <Spinner
                    android:id="@+id/spBlock"
                    android:layout_gravity="top"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"></Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="4"
                android:orientation="horizontal"
                android:background="@color/White"
                android:padding="10dp"
                android:layout_marginBottom="2dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/unit"
                    android:padding="20dp"/>
                <EditText
                    android:id="@+id/unitText"
                    android:layout_gravity="top"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/White"></EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:background="@color/White"
                android:layout_weight="0.75">

                <Button
                    android:id="@+id/cancel_project_filter"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/Cancel"
                    android:padding="5dp"
                    android:textStyle="bold"/>
                <Button
                    android:id="@+id/confirm_project_filter"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/OK"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/Orange"
                    android:textColor="@color/White"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>