<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/one_row_defect_confirm"
        android:weightSum="12"
        android:layout_marginTop="0.5dp">
        <LinearLayout
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10"
            android:background="@color/White"
            android:layout_marginRight="1dp">
            <TextView
                android:id="@+id/defectPlacetxtConfirm"
                android:text="@string/room"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:padding="5dp"/>

            <ImageView
                android:id="@+id/imageConfirm"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:paddingBottom="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="1dp"
            android:layout_weight="6.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="10"
            android:layout_marginRight="1dp">
            <TextView
                android:background="@color/White"
                android:padding="5dp"
                android:id="@+id/tradeConfirm"
                android:layout_weight="5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/tradeN"
                android:layout_marginBottom="1dp"/>
            <TextView
                android:background="@color/White"
                android:padding="5dp"
                android:id="@+id/descriptionConfirm"
                android:layout_weight="5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textStyle="italic"
                android:text="@string/des"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/deleteDefectItemConfirmBtn"
            android:layout_marginLeft="1dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@color/White"
            app:srcCompat="@drawable/cancel_icon"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>