<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_weight="10"
    android:background="@color/White">
    <ScrollView
        android:layout_weight="9"
        android:clipToPadding="true"
        android:fillViewport="false"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1.75"
                android:background="@color/Black"
                android:paddingTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/locate"
                    android:textColor="@color/White"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1"
                    android:text="defect location"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp"
                    android:padding="5dp"
                    android:visibility="visible"/>
                <Spinner
                    android:id="@+id/placeDTSpin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="2dp"
                    android:backgroundTint="@color/White"
                    android:visibility="gone"
                    android:padding="5dp"></Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1.75"
                android:background="@color/Black"
                android:layout_marginTop="0.5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/tradeName"
                    android:textColor="@color/White"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtTrade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="2dp"
                    android:padding="5dp"
                    android:text="trade_name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp"/>
                <Spinner
                    android:id="@+id/tradeDTSpin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="2dp"
                    android:backgroundTint="@color/White"
                    android:visibility="gone"
                    android:padding="5dp"></Spinner>
            </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1.75"
            android:background="@color/Black"
            android:layout_marginTop="0.5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/descript"
                    android:textColor="@color/White"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtDes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="2dp"
                    android:text="description_detail"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp"
                    android:padding="5dp"/>
                <Spinner
                    android:id="@+id/descriptionDTSpin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="2dp"
                    android:backgroundTint="@color/White"
                    android:visibility="gone"
                    android:padding="5dp"></Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="vertical"
                android:weightSum="1.75"
                android:background="@color/Black"
                android:layout_marginTop="0.5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="0.75"
                    android:text="@string/date"
                    android:textColor="@color/White"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtDateCreate"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1"
                    android:text="20/2/1698"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp"
                    android:padding="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="vertical"
                android:weightSum="1.75"
                android:background="@color/Black"
                android:layout_marginTop="0.5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="0.75"
                    android:text="@string/assign"
                    android:textColor="@color/White"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtAssign"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1"
                    android:text="contractor_name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp"
                    android:padding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="vertical"
                android:weightSum="1.75"
                android:background="@color/Black"
                android:layout_marginTop="0.5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="0.75"
                    android:text="@string/note"
                    android:textColor="@color/White"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtNote"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1"
                    android:text="some_note"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp"
                    android:padding="5dp" />
            </LinearLayout>
            <EditText
                android:background="@color/Orange"
                android:id="@+id/editNote"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp"
                android:visibility="gone"/>
            <EditText
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textSize="18dp"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0.5dp"
                android:orientation="horizontal"
                android:weightSum="10"
                android:background="@color/Black">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/complete"
                    android:textColor="@color/White"
                    android:textStyle="bold"
                    android:padding="10dp"/>

                <CheckBox
                    android:id="@+id/checkComplete"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/White"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2"
                android:background="@color/Black"
                android:layout_marginTop="0.5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defectBefore"
                    android:textColor="@color/White"
                    android:paddingTop="20dp"
                    android:paddingLeft="20dp"
                    android:textStyle="bold"/>
                <ImageView
                    android:id="@+id/imageViewDownload"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:srcCompat="@drawable/photo_icon_white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2"
                android:background="@color/Black"
                android:layout_marginTop="0.5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defectBefore"
                    android:textColor="@color/White"
                    android:paddingTop="20dp"
                    android:paddingLeft="20dp"
                    android:textStyle="bold"/>
                <ImageView
                    android:id="@+id/imageAfterClose"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:srcCompat="@drawable/photo_icon_white"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="12"
            android:orientation="horizontal"
            android:background="@color/Black">


            <Button
                android:id="@+id/editDefectDetail"
                android:textAlignment="center"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:text="@string/editBtn"
                android:layout_marginRight="1dp"/>

            <Button
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:text="@string/homeBtn"
                android:onClick="go_to_homescreen"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"/>

            <Button
                android:id="@+id/CloseDefectBtn"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:text="@string/closeBtn"
                android:layout_marginLeft="1dp"/>
        </LinearLayout>

</LinearLayout>
